<resources>
    <string name="app_name">Make Plans</string>
    <string name="action_settings">Settings</string>
    <string name="login_header">Make Plans</string>
    <string name="login_email_hint">Email</string>
    <string name="login_password_hint">Password</string>
    <string name="login_button">Login</string>
    <string name="login_help_button">Help me login</string>
    <string name="login_google_button">Login with Google</string>
    <string name="new_user_button">New user? Create an account</string>
    <string name="title_activity_create_event">CreateEvent</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="search">Search</string>
    <string name="friends">Friends</string>
    <string name="home">Home</string>
    <string name="plans">Plans</string>
    <string name="sign_up">Sign up</string>
    <string name="back_to_login">Already have an account? Log in</string>
    <string name="first_name">First name</string>
    <string name="last_name">Last name</string>
    <string name="city">City</string>
    <string name="state">State</string>
    <string name="phone_number">Phone number</string>
    <string-array name="event_types">
        <item>Public</item>
        <item>Friends Only</item>
    </string-array>
</resources>
