<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        android:weightSum="5"
        android:orientation="vertical"
        tools:context=".MainActivity">

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="4"
            android:gravity="center_horizontal"
            android:orientation="vertical">

        <TextView
                android:text="@string/login_header"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="64dp"
                android:layout_marginBottom="10dp"
                android:gravity="center"
                android:id="@+id/login_header"
                android:textSize="36sp"/>

        <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"
                android:ems="10"
                android:layout_marginTop="48dp"
                android:layout_marginHorizontal="48dp"
                android:id="@+id/login_email"
                android:hint="@string/login_email_hint"/>
        <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:ems="10"
                android:layout_marginTop="16dp"
                android:layout_marginHorizontal="48dp"
                android:id="@+id/login_password"
                android:hint="@string/login_password_hint"/>
        <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPersonName"
                android:ems="10"
                android:layout_marginTop="16dp"
                android:layout_marginHorizontal="48dp"
                android:id="@+id/first_name"
                android:hint="@string/first_name"/>
        <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPersonName"
                android:ems="10"
                android:layout_marginTop="16dp"
                android:layout_marginHorizontal="48dp"
                android:id="@+id/last_name"
                android:hint="@string/last_name"/>

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="16dp"
                android:layout_marginHorizontal="48dp"
                android:weightSum="2">
            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="textPersonName"
                android:ems="10"
                android:id="@+id/city"
                android:layout_weight="1"
                android:hint="@string/city"/>
            <EditText
                android:layout_width="60dp"
                android:layout_height="wrap_content"
                android:inputType="textPersonName"
                android:ems="10"
                android:id="@+id/state"
                android:layout_weight="1"
                android:hint="@string/state"/>

        </LinearLayout>

        <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="phone"
                android:ems="10"
                android:layout_marginTop="16dp"
                android:layout_marginHorizontal="48dp"
                android:id="@+id/phone"
                android:hint="@string/phone_number"/>

        <Button
                android:text="@string/sign_up"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:layout_marginHorizontal="72dp"
                android:id="@+id/signup_button"/>

    </LinearLayout>

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:orientation="vertical">

        <Button
                android:text="@string/back_to_login"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:id="@+id/login_button"
                style="@style/Widget.AppCompat.Button.Borderless"/>
    </LinearLayout>

</LinearLayout>