<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        android:weightSum="5"
        android:orientation="vertical"
        tools:showIn="@layout/activity_main"
        tools:context=".MainActivity">

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="4"
            android:gravity="center_horizontal"
            android:orientation="vertical">

        <TextView
                android:text="@string/login_header"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="64dp"
                android:layout_marginBottom="10dp"
                android:gravity="center"
                android:id="@+id/login_header"
                android:textSize="36sp"/>

        <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"
                android:ems="10"
                android:layout_marginTop="48dp"
                android:layout_marginHorizontal="48dp"
                android:id="@+id/login_email"
                android:hint="@string/login_email_hint"/>
        <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:ems="10"
                android:layout_marginTop="16dp"
                android:layout_marginHorizontal="48dp"
                android:id="@+id/login_password"
                android:hint="@string/login_password_hint"/>
        <Button
                android:text="@string/login_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:layout_marginHorizontal="72dp"
                android:id="@+id/login_button"/>

        <Button
                android:text="@string/login_help_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="64dp"
                android:id="@+id/login_help_button"
                style="@style/Widget.AppCompat.Button.Borderless"/>
        <Button
                android:text="@string/login_google_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/login_google_button"
                style="@style/Widget.AppCompat.Button.Borderless"/>


    </LinearLayout>

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:orientation="vertical">

        <Button
                android:text="@string/new_user_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:id="@+id/new_user_button"
                style="@style/Widget.AppCompat.Button.Borderless"/>
    </LinearLayout>

</LinearLayout>